# meteora

./: .gitignore  CMakeLists.txt  default.nix  flake.nix
configuration/: system.hpp.in
src/: main.cpp
src/shaders/: axis_frag.glsl  axis_vert.glsl  fragment.frag  grid_frag.glsl  grid_vert.glsl  light_frag.glsl  object_frag.glsl  object_vert.glsl  vertex.glsl  vertex.vert
src/system/: Backend.cpp  Backend.hpp  logger.hpp  opengl.hpp  system.hpp
src/system/camera/: Camera.cpp  Camera.hpp
src/system/graphics/: Backend.cpp  Backend.hpp  Buffer.hpp  Context.cpp  Context.hpp  Mesh.hpp  ShaderProgram.hpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  opengl.hpp
src/system/graphics/glm/: TexturedVertex.hpp  Vertex.hpp
src/system/graphics/input/: Camera.hpp
src/system/graphics/matrix/: Vertex.hpp
src/system/graphics/mesh/: AxisMesh.cpp  AxisMesh.hpp  PrimitiveMesh.cpp  PrimitiveMesh.hpp
src/system/graphics/opengl/: OpenglAbstracts.hpp  Renderer.hpp  Texture.hpp  TexturedVertexBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp
src/system/graphics/render/: Camera.cpp  Camera.hpp  Renderer.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  bindable.hpp  graphics.hpp  render.hpp
src/system/input/: Keyboard.cpp  Keyboard.hpp
src/system/math/: Vertex.hpp  matrix.hpp  vector.hpp  vertex.hpp
src/system/mesh/: Mesh.cpp  Mesh.hpp  PrimitiveMesh.hpp  RectangularPrism.cpp  RectangularPrism.hpp  Square.cpp  Square.hpp
src/system/render/: Renderer.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  graphics.hpp
